include/operators.h

ORTKI_API(ortki::OrtKITensor *) ortki_NonZero(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Not(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_OneHot(ortki::OrtKITensor * indices, ortki::OrtKITensor * depth, ortki::OrtKITensor * values, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Or(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_PRelu(ortki::OrtKITensor * X, ortki::OrtKITensor * slope);
ORTKI_API(ortki::OrtKITensor *) ortki_Pad(ortki::OrtKITensor * data, ortki::OrtKITensor * pads, ortki::OrtKITensor * constant_value, const char* mode);
ORTKI_API(ortki::OrtKITensor *) ortki_Pow(ortki::OrtKITensor * X, ortki::OrtKITensor * Y);
ORTKI_API(ortki::OrtKITensor *) ortki_QLinearConv(ortki::OrtKITensor * x, ortki::OrtKITensor * x_scale, ortki::OrtKITensor * x_zero_point, ortki::OrtKITensor * w, ortki::OrtKITensor * w_scale, ortki::OrtKITensor * w_zero_point, ortki::OrtKITensor * y_scale, ortki::OrtKITensor * y_zero_point, ortki::OrtKITensor * B, const char* auto_pad, int64_t* dilations, int dilations_size, int64_t group, int64_t* kernel_shape, int kernel_shape_size, int64_t* pads, int pads_size, int64_t* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_QLinearMatMul(ortki::OrtKITensor * a, ortki::OrtKITensor * a_scale, ortki::OrtKITensor * a_zero_point, ortki::OrtKITensor * b, ortki::OrtKITensor * b_scale, ortki::OrtKITensor * b_zero_point, ortki::OrtKITensor * y_scale, ortki::OrtKITensor * y_zero_point);
ORTKI_API(ortki::OrtKITensor *) ortki_QuantizeLinear(ortki::OrtKITensor * x, ortki::OrtKITensor * y_scale, ortki::OrtKITensor * y_zero_point, int64_t axis);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_RNN(ortki::OrtKITensor * X, ortki::OrtKITensor * W, ortki::OrtKITensor * R, ortki::OrtKITensor * B, ortki::OrtKITensor * sequence_lens, ortki::OrtKITensor * initial_h, float* activation_alpha, int activation_alpha_size, float* activation_beta, int activation_beta_size, const char** activations, int activations_size, float clip, const char* direction, int64_t hidden_size, int64_t layout);
ORTKI_API(ortki::OrtKITensor *) ortki_RandomNormal(int64_t dtype, float mean, float scale, float seed, int64_t* shape, int shape_size);
ORTKI_API(ortki::OrtKITensor *) ortki_RandomNormalLike(ortki::OrtKITensor * input, int64_t dtype, float mean, float scale, float seed);
ORTKI_API(ortki::OrtKITensor *) ortki_RandomUniform(int64_t dtype, float high, float low, float seed, int64_t* shape, int shape_size);
ORTKI_API(ortki::OrtKITensor *) ortki_RandomUniformLike(ortki::OrtKITensor * input, int64_t dtype, float high, float low, float seed);
ORTKI_API(ortki::OrtKITensor *) ortki_Range(ortki::OrtKITensor * start, ortki::OrtKITensor * limit, ortki::OrtKITensor * delta);
ORTKI_API(ortki::OrtKITensor *) ortki_Reciprocal(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceL1(ortki::OrtKITensor * data, int64_t* axes, int axes_size, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceL2(ortki::OrtKITensor * data, int64_t* axes, int axes_size, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceLogSum(ortki::OrtKITensor * data, int64_t* axes, int axes_size, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceLogSumExp(ortki::OrtKITensor * data, int64_t* axes, int axes_size, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceMax(ortki::OrtKITensor * data, int64_t* axes, int axes_size, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceMean(ortki::OrtKITensor * data, int64_t* axes, int axes_size, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceMin(ortki::OrtKITensor * data, int64_t* axes, int axes_size, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceProd(ortki::OrtKITensor * data, int64_t* axes, int axes_size, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceSum(ortki::OrtKITensor * data, ortki::OrtKITensor * axes, int64_t keepdims, int64_t noop_with_empty_axes);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceSumSquare(ortki::OrtKITensor * data, int64_t* axes, int axes_size, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_Relu(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Reshape(ortki::OrtKITensor * data, ortki::OrtKITensor * shape, int64_t allowzero);
ORTKI_API(ortki::OrtKITensor *) ortki_ReverseSequence(ortki::OrtKITensor * input, ortki::OrtKITensor * sequence_lens, int64_t batch_axis, int64_t time_axis);
ORTKI_API(ortki::OrtKITensor *) ortki_RoiAlign(ortki::OrtKITensor * X, ortki::OrtKITensor * rois, ortki::OrtKITensor * batch_indices, const char* mode, int64_t output_height, int64_t output_width, int64_t sampling_ratio, float spatial_scale);
ORTKI_API(ortki::OrtKITensor *) ortki_Round(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Scatter(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, ortki::OrtKITensor * updates, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_ScatterElements(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, ortki::OrtKITensor * updates, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_ScatterND(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, ortki::OrtKITensor * updates);
ORTKI_API(ortki::OrtKITensor *) ortki_Selu(ortki::OrtKITensor * X, float alpha, float gamma);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceAt(ortki::OrtKITensor ** input_sequence, int input_size, ortki::OrtKITensor * position);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceConstruct(ortki::OrtKITensor ** inputs, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceEmpty(int64_t dtype);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceErase(ortki::OrtKITensor ** input_sequence, int input_size, ortki::OrtKITensor * position);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceInsert(ortki::OrtKITensor ** input_sequence, int input_size, ortki::OrtKITensor * tensor, ortki::OrtKITensor * position);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceLength(ortki::OrtKITensor ** input_sequence, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Shape(ortki::OrtKITensor * data);
ORTKI_API(ortki::OrtKITensor *) ortki_Shrink(ortki::OrtKITensor * input, float bias, float lambd);
ORTKI_API(ortki::OrtKITensor *) ortki_Sigmoid(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Sign(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Sin(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Sinh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Size(ortki::OrtKITensor * data);
ORTKI_API(ortki::OrtKITensor *) ortki_Slice(ortki::OrtKITensor * data, ortki::OrtKITensor * starts, ortki::OrtKITensor * ends, ortki::OrtKITensor * axes, ortki::OrtKITensor * steps);
ORTKI_API(ortki::OrtKITensor *) ortki_Softmax(ortki::OrtKITensor * input, int64_t axis);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_SoftmaxCrossEntropyLoss(ortki::OrtKITensor * scores, ortki::OrtKITensor * labels, ortki::OrtKITensor * weights, int64_t ignore_index, const char* reduction);
ORTKI_API(ortki::OrtKITensor *) ortki_Softplus(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Softsign(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_SpaceToDepth(ortki::OrtKITensor * input, int64_t blocksize);
ORTKI_API(ortki::OrtKITensor *) ortki_SplitToSequence(ortki::OrtKITensor * input, ortki::OrtKITensor * split, int64_t axis, int64_t keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_Sqrt(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Squeeze(ortki::OrtKITensor * data, ortki::OrtKITensor * axes);
ORTKI_API(ortki::OrtKITensor *) ortki_StringNormalizer(ortki::OrtKITensor * X, const char* case_change_action, int64_t is_case_sensitive, const char* locale, const char** stopwords, int stopwords_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Sub(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_Sum(ortki::OrtKITensor ** data_0, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Tan(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Tanh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_TfIdfVectorizer(ortki::OrtKITensor * X, int64_t max_gram_length, int64_t max_skip_count, int64_t min_gram_length, const char* mode, int64_t* ngram_counts, int ngram_counts_size, int64_t* ngram_indexes, int ngram_indexes_size, int64_t* pool_int64s, int pool_int64s_size, const char** pool_strings, int pool_strings_size, float* weights, int weights_size);
ORTKI_API(ortki::OrtKITensor *) ortki_ThresholdedRelu(ortki::OrtKITensor * X, float alpha);
ORTKI_API(ortki::OrtKITensor *) ortki_Tile(ortki::OrtKITensor * input, ortki::OrtKITensor * repeats);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_TopK(ortki::OrtKITensor * X, ortki::OrtKITensor * K, int64_t axis, int64_t largest, int64_t sorted);
ORTKI_API(ortki::OrtKITensor *) ortki_Transpose(ortki::OrtKITensor * data, int64_t* perm, int perm_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Trilu(ortki::OrtKITensor * input, ortki::OrtKITensor * k, int64_t upper);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Unique(ortki::OrtKITensor * X, int64_t axis, int64_t sorted);
ORTKI_API(ortki::OrtKITensor *) ortki_Unsqueeze(ortki::OrtKITensor * data, ortki::OrtKITensor * axes);
ORTKI_API(ortki::OrtKITensor *) ortki_Where(ortki::OrtKITensor * condition, ortki::OrtKITensor * X, ortki::OrtKITensor * Y);
ORTKI_API(ortki::OrtKITensor *) ortki_Xor(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_ArrayFeatureExtractor(ortki::OrtKITensor * X, ortki::OrtKITensor * Y);
ORTKI_API(ortki::OrtKITensor *) ortki_Binarizer(ortki::OrtKITensor * X, float threshold);
ORTKI_API(ortki::OrtKITensor *) ortki_CastMap(ortki::OrtKITensor * X, const char* cast_to, const char* map_form, int64_t max_map);
ORTKI_API(ortki::OrtKITensor *) ortki_CategoryMapper(ortki::OrtKITensor * X, int64_t* cats_int64s, int cats_int64s_size, const char** cats_strings, int cats_strings_size, int64_t default_int64, const char* default_string);
ORTKI_API(ortki::OrtKITensor *) ortki_DictVectorizer(ortki::OrtKITensor * X, int64_t* int64_vocabulary, int int64_vocabulary_size, const char** string_vocabulary, int string_vocabulary_size);
ORTKI_API(ortki::OrtKITensor *) ortki_FeatureVectorizer(ortki::OrtKITensor ** X, int input_size, int64_t* inputdimensions, int inputdimensions_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Imputer(ortki::OrtKITensor * X, float* imputed_value_floats, int imputed_value_floats_size, int64_t* imputed_value_int64s, int imputed_value_int64s_size, float replaced_value_float, int64_t replaced_value_int64);
ORTKI_API(ortki::OrtKITensor *) ortki_LabelEncoder(ortki::OrtKITensor * X, float default_float, int64_t default_int64, const char* default_string, float* keys_floats, int keys_floats_size, int64_t* keys_int64s, int keys_int64s_size, const char** keys_strings, int keys_strings_size, float* values_floats, int values_floats_size, int64_t* values_int64s, int values_int64s_size, const char** values_strings, int values_strings_size);