CSharp/OrtKISharp/Operators.cs


    [DllImport(LibraryName)]
    public static extern Tensor ortki_NonZero(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Not(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_OneHot(Tensor indices, Tensor depth, Tensor values, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_OptionalGetElement(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_OptionalHasElement(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Or(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_PRelu(Tensor X, Tensor slope);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Pad(Tensor data, Tensor pads, Tensor constant_value, string mode);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Pow(Tensor X, Tensor Y);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_QLinearConv(Tensor x, Tensor x_scale, Tensor x_zero_point, Tensor w, Tensor w_scale, Tensor w_zero_point, Tensor y_scale, Tensor y_zero_point, Tensor B, string auto_pad, long[] dilations, nuint dilations_size, long group, long[] kernel_shape, nuint kernel_shape_size, long[] pads, nuint pads_size, long[] strides, nuint strides_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_QLinearMatMul(Tensor a, Tensor a_scale, Tensor a_zero_point, Tensor b, Tensor b_scale, Tensor b_zero_point, Tensor y_scale, Tensor y_zero_point);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_QuantizeLinear(Tensor x, Tensor y_scale, Tensor y_zero_point, long axis);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_RNN(Tensor X, Tensor W, Tensor R, Tensor B, Tensor sequence_lens, Tensor initial_h, float[] activation_alpha, nuint activation_alpha_size, float[] activation_beta, nuint activation_beta_size, string[] activations, nuint activations_size, float clip, string direction, long hidden_size, long layout);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_RandomNormal(long dtype, float mean, float scale, float seed, long[] shape, nuint shape_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_RandomNormalLike(Tensor input, long dtype, float mean, float scale, float seed);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_RandomUniform(long dtype, float high, float low, float seed, long[] shape, nuint shape_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_RandomUniformLike(Tensor input, long dtype, float high, float low, float seed);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Range(Tensor start, Tensor limit, Tensor delta);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Reciprocal(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceL1(Tensor data, long[] axes, nuint axes_size, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceL2(Tensor data, long[] axes, nuint axes_size, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceLogSum(Tensor data, long[] axes, nuint axes_size, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceLogSumExp(Tensor data, long[] axes, nuint axes_size, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceMax(Tensor data, long[] axes, nuint axes_size, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceMean(Tensor data, long[] axes, nuint axes_size, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceMin(Tensor data, long[] axes, nuint axes_size, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceProd(Tensor data, long[] axes, nuint axes_size, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceSum(Tensor data, Tensor axes, long keepdims, long noop_with_empty_axes);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReduceSumSquare(Tensor data, long[] axes, nuint axes_size, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Relu(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Reshape(Tensor data, Tensor shape, long allowzero);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ReverseSequence(Tensor input, Tensor sequence_lens, long batch_axis, long time_axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_RoiAlign(Tensor X, Tensor rois, Tensor batch_indices, string coordinate_transformation_mode, string mode, long output_height, long output_width, long sampling_ratio, float spatial_scale);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Round(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_STFT(Tensor signal, Tensor frame_step, Tensor window, Tensor frame_length, long onesided);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Scatter(Tensor data, Tensor indices, Tensor updates, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ScatterElements(Tensor data, Tensor indices, Tensor updates, long axis, string reduction);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ScatterND(Tensor data, Tensor indices, Tensor updates, string reduction);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Selu(Tensor X, float alpha, float gamma);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_SequenceAt(IntPtr[] input_sequence, nuint input_size, Tensor position);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_SequenceConstruct(IntPtr[] inputs, nuint input_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_SequenceEmpty(long dtype);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_SequenceErase(IntPtr[] input_sequence, nuint input_size, Tensor position);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_SequenceInsert(IntPtr[] input_sequence, nuint input_size, Tensor tensor, Tensor position);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_SequenceLength(IntPtr[] input_sequence, nuint input_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Shape(Tensor data, long end, long start);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Shrink(Tensor input, float bias, float lambd);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Sigmoid(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Sign(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Sin(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Sinh(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Size(Tensor data);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Slice(Tensor data, Tensor starts, Tensor ends, Tensor axes, Tensor steps);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Softmax(Tensor input, long axis);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_SoftmaxCrossEntropyLoss(Tensor scores, Tensor labels, Tensor weights, long ignore_index, string reduction);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Softplus(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Softsign(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_SpaceToDepth(Tensor input, long blocksize);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_SplitToSequence(Tensor input, Tensor split, long axis, long keepdims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Sqrt(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Squeeze(Tensor data, Tensor axes);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_StringNormalizer(Tensor X, string case_change_action, long is_case_sensitive, string locale, string[] stopwords, nuint stopwords_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Sub(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Sum(IntPtr[] data_0, nuint input_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Tan(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Tanh(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_TfIdfVectorizer(Tensor X, long max_gram_length, long max_skip_count, long min_gram_length, string mode, long[] ngram_counts, nuint ngram_counts_size, long[] ngram_indexes, nuint ngram_indexes_size, long[] pool_int64s, nuint pool_int64s_size, string[] pool_strings, nuint pool_strings_size, float[] weights, nuint weights_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ThresholdedRelu(Tensor X, float alpha);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Tile(Tensor input, Tensor repeats);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_TopK(Tensor X, Tensor K, long axis, long largest, long sorted);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Transpose(Tensor data, long[] perm, nuint perm_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Trilu(Tensor input, Tensor k, long upper);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_Unique(Tensor X, long axis, long sorted);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Unsqueeze(Tensor data, Tensor axes);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Where(Tensor condition, Tensor X, Tensor Y);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Xor(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ArrayFeatureExtractor(Tensor X, Tensor Y);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Binarizer(Tensor X, float threshold);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_CastMap(Tensor X, string cast_to, string map_form, long max_map);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_CategoryMapper(Tensor X, long[] cats_int64s, nuint cats_int64s_size, string[] cats_strings, nuint cats_strings_size, long default_int64, string default_string);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_DictVectorizer(Tensor X, long[] int64_vocabulary, nuint int64_vocabulary_size, string[] string_vocabulary, nuint string_vocabulary_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_FeatureVectorizer(IntPtr[] X, nuint input_size, long[] inputdimensions, nuint inputdimensions_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Imputer(Tensor X, float[] imputed_value_floats, nuint imputed_value_floats_size, long[] imputed_value_int64s, nuint imputed_value_int64s_size, float replaced_value_float, long replaced_value_int64);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_LabelEncoder(Tensor X, float default_float, long default_int64, string default_string, float[] keys_floats, nuint keys_floats_size, long[] keys_int64s, nuint keys_int64s_size, string[] keys_strings, nuint keys_strings_size, float[] values_floats, nuint values_floats_size, long[] values_int64s, nuint values_int64s_size, string[] values_strings, nuint values_strings_size);
